fixed something little in spacing for middle

--- a/src/components/Footer/styles2.css
+++ b/src/components/Footer/styles2.css
@@ -60,7 +60,7 @@
     font-weight: bold;
     font-size: 15px;
     color: #000000;
-    margin-bottom: 5px;
+    margin-bottom: 15px;
 }
 
 .media-links {
